# akonadi-google-applets

./: CHANGELOG  CMakeLists.txt  Messages.sh  README  THANKS  akonadi-google-plasmoids.kdev4  akonadi-plasmoids.kdev4
calendar/: CHANGELOG  CMakeLists.txt  CMakeLists.txt~  Messages.sh  README  plasma-applet-calendar.desktop  plasma-applet-calendar.desktop~  plasma-calendar.cpp~
calendar/src/: CMakeLists.txt  agendaconfig.cpp  agendaconfig.h  agendaconfig.ui  agendawidget.cpp  agendawidget.h  agendawidgetdateitem.cpp  agendawidgetdateitem.h  agendawidgetdatelabel.cpp  agendawidgetdatelabel.h  agendawidgeteventitem.cpp  agendawidgeteventitem.h  agendawidgetlayout.cpp  agendawidgetlayout.h  calendarconfig.cpp  calendarconfig.h  calendarconfig.ui  calendarwidget.cpp  calendarwidget.h  calendarwidgetdayitem.cpp  calendarwidgetdayitem.h  clockwidget.cpp  clockwidget.h  config.ui  plasma-applet-akonadi-calendars.desktop  plasma-applet-calendar.desktop  plasma-applet-google-calendar.desktop  plasma-calendar.cpp  plasma-calendar.h  plasmacalendar.cpp  plasmacalendar.h
calendar/src/ui/: agendaconfig.ui  calendarconfig.ui  clockconfig.ui  config.ui
contacts/: .gitignore~  CHANGELOG  CMakeList.txt~  CMakeLists.txt  CMakeLists.txt~  Messages.sh  README  config.ui  contactitem.cpp  contactitem.cpp~  contactitem.h  contactitem.h~  contactslayout.cpp  contactslayout.h  contactswidget.cpp  contactswidget.cpp~  contactswidget.h  contactswidget.h~  contactwidget.cpp  contactwidget.h  contactwidgetitem.cpp  contactwidgetitem.h  plasma-applet-contact.desktop~  plasma-applet-contacts.desktop  plasma-applet-google-contacts.desktop  plasma-contact.cpp~  plasma-contact.h~  plasma-contacts.cpp  plasma-contacts.cpp~  plasma-contacts.h  plasma-contacts.h~  plasmacontacts.cpp  plasmacontacts.h
contacts/src/: CMakeLists.txt  config.ui  contactslayout.cpp  contactslayout.h  contactwidget.cpp  contactwidget.h  contactwidgetitem.cpp  contactwidgetitem.h  contactwidgetiteminfo.cpp  contactwidgetiteminfo.h  contactwidgetiteminfolabel.cpp  contactwidgetiteminfolabel.h  plasma-applet-akonadi-contacts.desktop  plasma-applet-contacts.desktop  plasma-applet-google-contacts.desktop  plasmacontacts.cpp  plasmacontacts.h
contacts/src/ui/: config.ui
tasks/: CHANGELOG  CMakeLists.txt  Messages.sh  README  appearanceconfig.ui  config.ui  plasmatasks.cpp  plasmatasks.h  taskedit.ui  taskeditor.h  tasklayout.cpp  tasklayout.h  taskwidget.cpp  taskwidget.h  taskwidgetitem.cpp  taskwidgetitem.h
tasks/src/: CMakeLists.txt  appearanceconfig.ui  config.ui  plasma-applet-akonadi-tasks.desktop  plasma-applet-google-tasks.desktop  plasma-applet-tasks.desktop  plasmatasks.cpp  plasmatasks.h  taskedit.ui  taskeditor.cpp  taskeditor.h  tasklayout.cpp  tasklayout.h  taskwidget.cpp  taskwidget.h  taskwidgetitem.cpp  taskwidgetitem.h  taskwidgetitemdate.cpp  taskwidgetitemdate.h  taskwidgetiteminfo.cpp  taskwidgetiteminfo.h
tasks/src/ui/: appearanceconfig.ui  config.ui  taskedit.ui
